removed footer team text

--- a/public/lang/cn/credits/index.html
+++ b/public/lang/cn/credits/index.html
@@ -32,7 +32,7 @@
 						<img class="h-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
 					</a>
 					<!-- primary nav -->
-					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold">
+					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold text-center">
 						<a href="/lang/cn" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> 主页 </a>
 						
 						<a href="/lang/cn/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> 更新日志 </a>
