--- a/public/lang/de/legal-notice/index.html
+++ b/public/lang/de/legal-notice/index.html
@@ -32,7 +32,7 @@
 						<img class="h-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
 					</a>
 					<!-- primary nav -->
-					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold">
+					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold text-center">
 						<a href="/lang/de" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Home </a>
 						
 						<a href="/lang/de/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Änderungsprotokoll </a>
@@ -368,20 +368,7 @@
 				<section class="flex md:items-end justify-between max-w-screen mx-auto pt-8 flex-col-reverse md:flex-row">
 					<!-- text -->
 					<div class="pt-6 md:pt-0 flex flex-col space-y-1">
-						<!-- logo -->
-						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-text-purple text-transparent bg-clip-text">Ein PlayCover-Teamprodukt</h1>
-
-						<!-- alex credits -->
-						<div class="relative">
-							<!-- placeholder -->
-							<p class="text-lg text-transparent transition duration-200 ease-in-out">Präsentiert von <span class="font-neon font-medium">Alexandr Dorofeev</span></p>
-
-							<!-- text -->
-							<p class="text-lg absolute inset-0 z-30 transition duration-200 ease-in-out">Präsentiert von <span class="text-pink-600 dark:text-gray-300 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
-
-							<!-- bg blur -->
-							<p class="text-lg text-transparent bg-gradient-to-r absolute inset-0 blur-sm dark:text-transparent transition duration-200 ease-in-out">Präsentiert von <span class="text-pink-100 dark:text-red-600 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
-						</div>
+						
 					</div>
 
 					<!-- links -->
